# claude-fleet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  app.py  pyproject.toml  run.sh
.github/workflows/: ci.yml
core/: actions.py  alerts.py  codex.py  history.py  memory.py  opencode.py  patrol.py  perms.py  plan_usage.py  plans.py  pricing.py  remote.py  search.py  sessions.py  shells.py  skills.py  transcripts.py  usage.py  vscode.py
fixtures/: seed.py
scripts/: gen-screenshots.sh  install-vscode-extension.sh
static/: index.html
tests/: test_alerts.py  test_background_tasks.py  test_codex_review.py  test_format_idle.py  test_pending_wakeup.py  test_plan_usage.py  test_pricing.py  test_remote.py  test_shells.py  test_triage_model_error.py  test_triage_queue_op.py  test_triage_shell.py  test_usage.py  test_user_input.py  test_vscode.py  test_workflow_run.py
vscode-extension/: README.md  extension.js  package.json
