[project]
name = "claude-fleet"
version = "0.1.0"
description = "Local web dashboard for multi-window Claude Code orchestration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "watchfiles>=0.24",
    "sse-starlette>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
markers = [
    "unit: fast tests with no external dependencies",
]
